src/mgmt_protocol.re.c
/* Generated by re2c 3.0 */
#line 1 "lexer/mgmt_protocol.re"
#include "../include/mgmt_protocol.re.h"
#include <stdbool.h>
#include <string.h>
#line 18 "lexer/mgmt_protocol.re"


#line 23 "lexer/mgmt_protocol.re"


MgmtCommand parseMgmtRequest(Input *in, char **arg, size_t *argLen, size_t *len)
{
	char yych;
	char *args = NULL, *arge = NULL, *end;
	MgmtCommand result;
	
#line 19 "./src/mgmt_protocol.re.c"
#define yyt1 in->yyt1
#define yyt2 in->yyt2
#line 30 "lexer/mgmt_protocol.re"


#define YYGETSTATE in->state
#line 26 "./src/mgmt_protocol.re.c"
switch (YYGETSTATE) {
	default: goto yy0;
	case 0:
		if (in->lim <= in->cur) goto yy75;
		goto yyFillLabel0;
	case 1:
		if (in->lim <= in->cur) goto yy3;
		goto yyFillLabel1;
	case 2:
		if (in->lim <= in->cur) goto yy3;
		goto yyFillLabel2;
	case 3:
		if (in->lim <= in->cur) goto yy3;
		goto yyFillLabel3;
	case 4:
		if (in->lim <= in->cur) goto yy3;
		goto yyFillLabel4;
	case 5:
		if (in->lim <= in->cur) goto yy3;
		goto yyFillLabel5;
	case 6:
		if (in->lim <= in->cur) goto yy3;
		goto yyFillLabel6;
	case 7:
		if (in->lim <= in->cur) goto yy3;
		goto yyFillLabel7;
	case 8:
		if (in->lim <= in->cur) goto yy3;
		goto yyFillLabel8;
	case 9:
		if (in->lim <= in->cur) goto yy3;
		goto yyFillLabel9;
	case 10:
		if (in->lim <= in->cur) goto yy3;
		goto yyFillLabel10;
	case 11:
		if (in->lim <= in->cur) goto yy3;
		goto yyFillLabel11;
	case 12:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel12;
	case 13:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel13;
	case 14:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel14;
	case 15:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel15;
	case 16:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel16;
	case 17:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel17;
	case 18:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel18;
	case 19:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel19;
	case 20:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel20;
	case 21:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel21;
	case 22:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel22;
	case 23:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel23;
	case 24:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel24;
	case 25:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel25;
	case 26:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel26;
	case 27:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel27;
	case 28:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel28;
	case 29:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel29;
	case 30:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel30;
	case 31:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel31;
	case 32:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel32;
	case 33:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel33;
	case 34:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel34;
	case 35:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel35;
	case 36:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel36;
	case 37:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel37;
	case 38:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel38;
	case 39:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel39;
	case 40:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel40;
	case 41:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel41;
	case 42:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel42;
	case 43:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel43;
	case 44:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel44;
	case 45:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel45;
	case 46:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel46;
	case 47:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel47;
	case 48:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel48;
	case 49:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel49;
	case 50:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel50;
	case 51:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel51;
	case 52:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel52;
	case 53:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel53;
	case 54:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel54;
	case 55:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel55;
	case 56:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel56;
	case 57:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel57;
	case 58:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel58;
	case 59:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel59;
	case 60:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel60;
	case 61:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel61;
	case 62:
		if (in->lim <= in->cur) goto yy17;
		goto yyFillLabel62;
	case 63:
		if (in->lim <= in->cur) goto yy196;
		goto yyFillLabel63;
	case 64:
		if (in->lim <= in->cur) goto yy78;
		goto yyFillLabel64;
	case 65:
		if (in->lim <= in->cur) goto yy78;
		goto yyFillLabel65;
	case 66:
		if (in->lim <= in->cur) goto yy78;
		goto yyFillLabel66;
	case 67:
		if (in->lim <= in->cur) goto yy78;
		goto yyFillLabel67;
	case 68:
		if (in->lim <= in->cur) goto yy78;
		goto yyFillLabel68;
	case 69:
		if (in->lim <= in->cur) goto yy78;
		goto yyFillLabel69;
	case 70:
		if (in->lim <= in->cur) goto yy78;
		goto yyFillLabel70;
	case 71:
		if (in->lim <= in->cur) goto yy78;
		goto yyFillLabel71;
	case 72:
		if (in->lim <= in->cur) goto yy78;
		goto yyFillLabel72;
	case 73:
		if (in->lim <= in->cur) goto yy78;
		goto yyFillLabel73;
	case 74:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel74;
	case 75:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel75;
	case 76:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel76;
	case 77:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel77;
	case 78:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel78;
	case 79:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel79;
	case 80:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel80;
	case 81:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel81;
	case 82:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel82;
	case 83:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel83;
	case 84:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel84;
	case 85:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel85;
	case 86:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel86;
	case 87:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel87;
	case 88:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel88;
	case 89:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel89;
	case 90:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel90;
	case 91:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel91;
	case 92:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel92;
	case 93:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel93;
	case 94:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel94;
	case 95:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel95;
	case 96:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel96;
	case 97:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel97;
	case 98:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel98;
	case 99:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel99;
	case 100:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel100;
	case 101:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel101;
	case 102:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel102;
	case 103:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel103;
	case 104:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel104;
	case 105:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel105;
	case 106:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel106;
	case 107:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel107;
	case 108:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel108;
	case 109:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel109;
	case 110:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel110;
	case 111:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel111;
	case 112:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel112;
	case 113:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel113;
	case 114:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel114;
	case 115:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel115;
	case 116:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel116;
	case 117:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel117;
	case 118:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel118;
	case 119:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel119;
	case 120:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel120;
	case 121:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel121;
	case 122:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel122;
	case 123:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel123;
	case 124:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel124;
	case 125:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel125;
	case 126:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel126;
	case 127:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel127;
	case 128:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel128;
	case 129:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel129;
	case 130:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel130;
	case 131:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel131;
	case 132:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel132;
	case 133:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel133;
	case 134:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel134;
	case 135:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel135;
	case 136:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel136;
	case 137:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel137;
	case 138:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel138;
	case 139:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel139;
	case 140:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel140;
	case 141:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel141;
	case 142:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel142;
	case 143:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel143;
	case 144:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel144;
	case 145:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel145;
	case 146:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel146;
	case 147:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel147;
	case 148:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel148;
	case 149:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel149;
	case 150:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel150;
	case 151:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel151;
	case 152:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel152;
	case 153:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel153;
	case 154:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel154;
	case 155:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel155;
	case 156:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel156;
	case 157:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel157;
	case 158:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel158;
	case 159:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel159;
	case 160:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel160;
	case 161:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel161;
	case 162:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel162;
	case 163:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel163;
	case 164:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel164;
	case 165:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel165;
	case 166:
		if (in->lim <= in->cur) goto yy91;
		goto yyFillLabel166;
}
#line 33 "lexer/mgmt_protocol.re"

#undef YYGETSTATE

	for (;;)
	{
		
#line 538 "./src/mgmt_protocol.re.c"

yy0:
	switch (in->cond) {
		case yycpass: goto yyc_pass;
		case yyctrns: goto yyc_trns;
	}
/* *********************************** */
yyc_pass:
yyFillLabel0:
	yych = *in->cur;
	switch (yych) {
		case '\r': goto yy4;
		case ' ':
		case '!':
		case '"':
		case '#':
		case '$':
		case '%':
		case '&':
		case '\'':
		case '(':
		case ')':
		case '*':
		case '+':
		case ',':
		case '-':
		case '.':
		case '/':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case ':':
		case ';':
		case '<':
		case '=':
		case '>':
		case '?':
		case '@':
		case 'A':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'M':
		case 'N':
		case 'O':
		case 'R':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '[':
		case '\\':
		case ']':
		case '^':
		case '_':
		case '`':
		case 'a':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'm':
		case 'n':
		case 'o':
		case 'r':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
		case '{':
		case '|':
		case '}':
		case '~':
		case 0x7F: goto yy5;
		case 'B':
		case 'b': goto yy6;
		case 'C':
		case 'c': goto yy7;
		case 'D':
		case 'd': goto yy8;
		case 'L':
		case 'l': goto yy9;
		case 'P':
		case 'p': goto yy10;
		case 'Q':
		case 'q': goto yy11;
		case 'S':
		case 's': goto yy12;
		case 'T':
		case 't': goto yy13;
		case 'U':
		case 'u': goto yy14;
		default:
			if (in->lim <= in->cur) {
				in->state = 0;
				{ return MGMT_INCOMPLETE; }
			}
			goto yy2;
	}
yy2:
	++in->cur;
yy3:
	in->state = -1;
#line 69 "lexer/mgmt_protocol.re"
	{ result = MGMT_INVALID_CMD; break; }
#line 660 "./src/mgmt_protocol.re.c"
yy4:
	++in->cur;
yyFillLabel1:
	yych = *in->cur;
	switch (yych) {
		case '\n': goto yy15;
		default:
			if (in->lim <= in->cur) {
				in->state = 1;
				{ return MGMT_INCOMPLETE; }
			}
			goto yy3;
	}
yy5:
	in->mar = ++in->cur;
yyFillLabel2:
	yych = *in->cur;
	switch (yych) {
		case '\r': goto yy16;
		case ' ':
		case '!':
		case '"':
		case '#':
		case '$':
		case '%':
		case '&':
		case '\'':
		case '(':
		case ')':
		case '*':
		case '+':
		case ',':
		case '-':
		case '.':
		case '/':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case ':':
		case ';':
		case '<':
		case '=':
		case '>':
		case '?':
		case '@':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '[':
		case '\\':
		case ']':
		case '^':
		case '_':
		case '`':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
		case '{':
		case '|':
		case '}':
		case '~':
		case 0x7F: goto yy18;
		default:
			if (in->lim <= in->cur) {
				in->state = 2;
				{ return MGMT_INCOMPLETE; }
			}
			goto yy3;
	}
yy6:
	in->mar = ++in->cur;
yyFillLabel3:
	yych = *in->cur;
	switch (yych) {
		case '\r': goto yy16;
		case ' ':
		case '!':
		case '"':
		case '#':
		case '$':
		case '%':
		case '&':
		case '\'':
		case '(':
		case ')':
		case '*':
		case '+':
		case ',':
		case '-':
		case '.':
		case '/':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case ':':
		case ';':
		case '<':
		case '=':
		case '>':
		case '?':
		case '@':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '[':
		case '\\':
		case ']':
		case '^':
		case '_':
		case '`':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
		case '{':
		case '|':
		case '}':
		case '~':
		case 0x7F: goto yy18;
		case 'U':
		case 'u': goto yy20;
		default:
			if (in->lim <= in->cur) {
				in->state = 3;
				{ return MGMT_INCOMPLETE; }
			}
			goto yy3;
	}
yy7:
	in->mar = ++in->cur;
yyFillLabel4:
	yych = *in->cur;
	switch (yych) {
		case '\r': goto yy16;
		case ' ':
		case '!':
		case '"':
		case '#':
		case '$':
		case '%':
		case '&':
		case '\'':
		case '(':
		case ')':
		case '*':
		case '+':
		case ',':
		case '-':
		case '.':
		case '/':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case ':':
		case ';':
		case '<':
		case '=':
		case '>':
		case '?':
		case '@':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '[':
		case '\\':
		case ']':
		case '^':
		case '_':
		case '`':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
		case '{':
		case '|':
		case '}':
		case '~':
		case 0x7F: goto yy18;
		case 'A':
		case 'a': goto yy21;
		default:
			if (in->lim <= in->cur) {
				in->state = 4;
				{ return MGMT_INCOMPLETE; }
			}
			goto yy3;
	}
yy8:
	in->mar = ++in->cur;
yyFillLabel5:
	yych = *in->cur;
	switch (yych) {
		case '\r': goto yy16;
		case ' ':
		case '!':
		case '"':
		case '#':
		case '$':
		case '%':
		case '&':
		case '\'':
		case '(':
		case ')':
		case '*':
		case '+':
		case ',':
		case '-':
		case '.':
		case '/':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case ':':
		case ';':
		case '<':
		case '=':
		case '>':
		case '?':
		case '@':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '[':
		case '\\':
		case ']':
		case '^':
		case '_':
		case '`':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
		case '{':
		case '|':
		case '}':
		case '~':
		case 0x7F: goto yy18;
		case 'I':
		case 'i': goto yy22;
		default:
			if (in->lim <= in->cur) {
				in->state = 5;
				{ return MGMT_INCOMPLETE; }
			}
			goto yy3;
	}
yy9:
	in->mar = ++in->cur;
yyFillLabel6:
	yych = *in->cur;
	switch (yych) {
		case '\r': goto yy16;
		case ' ':
		case '!':
		case '"':
		case '#':
		case '$':
		case '%':
		case '&':
		case '\'':
		case '(':
		case ')':
		case '*':
		case '+':
		case ',':
		case '-':
		case '.':
		case '/':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case ':':
		case ';':
		case '<':
		case '=':
		case '>':
		case '?':
		case '@':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '[':
		case '\\':
		case ']':
		case '^':
		case '_':
		case '`':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
		case '{':
		case '|':
		case '}':
		case '~':
		case 0x7F: goto yy18;
		case 'I':
		case 'i': goto yy23;
		default:
			if (in->lim <= in->cur) {
				in->state = 6;
				{ return MGMT_INCOMPLETE; }
			}
			goto yy3;
	}
yy10:
	in->mar = ++in->cur;
yyFillLabel7:
	yych = *in->cur;
	switch (yych) {
		case '\r': goto yy16;
		case ' ':
		case '!':
		case '"':
		case '#':
		case '$':
		case '%':
		case '&':
		case '\'':
		case '(':
		case ')':
		case '*':
		case '+':
		case ',':
		case '-':
		case '.':
		case '/':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case ':':
		case ';':
		case '<':
		case '=':
		case '>':
		case '?':
		case '@':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '[':
		case '\\':
		case ']':
		case '^':
		case '_':
		case '`':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
		case '{':
		case '|':
		case '}':
		case '~':
		case 0x7F: goto yy18;
		case 'A':
		case 'a': goto yy24;
		default:
			if (in->lim <= in->cur) {
				in->state = 7;
				{ return MGMT_INCOMPLETE; }
			}
			goto yy3;
	}
yy11:
	in->mar = ++in->cur;
yyFillLabel8:
	yych = *in->cur;
	switch (yych) {
		case '\r': goto yy16;
		case ' ':
		case '!':
		case '"':
		case '#':
		case '$':
		case '%':
		case '&':
		case '\'':
		case '(':
		case ')':
		case '*':
		case '+':
		case ',':
		case '-':
		case '.':
		case '/':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case ':':
		case ';':
		case '<':
		case '=':
		case '>':
		case '?':
		case '@':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '[':
		case '\\':
		case ']':
		case '^':
		case '_':
